# openkds

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  bazaar.service  config.json  install.sh  openkds.service  pyproject.toml  requirements.txt  update.sh
.github/workflows/: docker.yml
backend/: config.py  database.py  main.py  models.py  printers.py  tickets.py
frontend/: app.js  index.html  style.css
openkds/: config.py  database.py  grill.py  main.py  menu.py  models.py  printers.py  renderer.py  tickets.py
openkds/default_templates/: README.md  assembly.j2  billigs.j2  client.j2
openkds/defaults/: config.json  menu.yaml
openkds/frontend/: app.js  index.html  site.webmanifest  style.css
openkds/locales/: en.json  fr.json
