[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openkds"
version = "0.1.0"
description = "Open-source POS/KDS system for school fairs and events"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-escpos[usb]>=3.0",
    "pydantic>=2.0",
]

[project.scripts]
openkds = "openkds.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openkds*"]

[tool.setuptools.package-data]
openkds = ["frontend/*"]
